--- a/views/_api-markdown.jade
+++ b/views/_api-markdown.jade
@@ -1,7 +1,7 @@
 :markdown
   Jeet's API.
   =======================
-  A sub head about Eli's coolness.
+  Interact with our docs.
   ---------------------------------------
 
   ### column ###
@@ -88,5 +88,5 @@ a.btn.view-example(data-scroll-goto='7', data-example='align-example') View an e
 :markdown
   ### cf ###
   *`()`*
-  
+
   Nicholas Gallagher's clearfix. Use this to wrap any set of `column()`s or `spans`.
