--- a/views/_comparison.jade
+++ b/views/_comparison.jade
@@ -1,15 +1,16 @@
 .comparison.text-center.grid-container(data-scroll-index='2')
   .contained.scrollReveal.fade-in
-    h2 Jeet's great!
+    h2 Grids aren't all the same. By being a preprocessor-only grid, Jeet can do things other grids can't
   .contained.scrollReveal.comparison-animation
     .comparatives.fourth.span-example
       .blank-box.bigger-cell.cell
       .comparative.darker.cell
-        p Easy to use
+        p Easy to start with
       .comparative.cell
-        p Flexible
+        p Ratio Flexibility
       .comparative.darker.cell
-        p Actual columns
+        p
+          | Actual columns <a href='http://imgur.com/a/OWyOQ', target='_blank'>?</a>
     .bootstrap.fourth.span-example
       .bootstrap-grid.bigger-cell.cell
       .check.darker.cell
