--- a/views/_installation.jade
+++ b/views/_installation.jade
@@ -1,14 +1,14 @@
-.installation.grid-container(data-scroll-index='3') 
+.installation.grid-container(data-scroll-index='3')
   .contained
     h1.text-center.scrollReveal.fade-in Getting started is easy.
-    h2.text-center.scrollReveal.fade-in Something about two options lorem ipsum dolor sit amet.
+    h2.text-center.scrollReveal.fade-in Jeet is available in 2 tasty preprocessor flavors so it fits easily into any workflow.
     .half.scss.stack-example.scrollReveal.slide-in-first
       h3 SCSS Installation
       ol
         li
-          | Install Ruby [ 
+          | Install Ruby [
           a.inline-link(href='http://rubyinstaller.org/') Windows
-          |  , 
+          |  ,
           a.inline-link(href='https://github.com/sstephenson/rbenv') Mac/Linux
           |  ]
         li
@@ -25,13 +25,13 @@
             code.inline.to-copy @import 'jeet/index.scss';
             a.btn.copy-btn(data-clipboard-text="@import 'jeet/index.scss';") copy
           p.copy-code-above
-            | goes at the top of  
+            | goes at the top of
             code ~/Project/css/foo.scss
     .half.stylus.scrollReveal.slide-in-second
       h3 Stylus Installation
       ol
         li
-          | Install 
+          | Install
           a.inline-link(href='http://nodejs.org/') NodeJS
         li
           code.inline.to-copy npm install -g jeet
@@ -44,12 +44,12 @@
             code.inline.to-copy @import 'jeet'
             a.btn.copy-btn(data-clipboard-text="@import 'jeet'") copy
           p.copy-code-above
-            | goes at the top of  
+            | goes at the top of
             code ~/Project/foo.styl
       p.usage
-        | *Learn more about usage with  
+        | *Learn more about usage with
         a.inline-link(href='https://github.com/mojotech/jeet/tree/master/stylus#usage') stylus
-        |  or 
+        |  or
         a.inline-link(href='https://github.com/mojotech/jeet/tree/master/scss#usage') scss
         |  here.
   include _nav-orange
