--- a/views/_features.jade
+++ b/views/_features.jade
@@ -2,13 +2,13 @@
   .cf
     .contained
       h1.scrollReveal.fade-in What makes a good grid system?
-      h2.scrollReveal.fade-in A sub head. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+      h2.scrollReveal.fade-in Fractions, math, consistently sized gutters, actual columns
     .contained.edit-example
       .third.flexibility.column-example
         .features-img.flexibility-img.scrollReveal
         h3.scrollReveal.fade-in Flexibility
         p.scrollReveal.fade-in
-          | Jeet is built on CSS preprocessors. It's capable of doing a lot of programatic calculations that CSS can't. As such, you're no longer limited to classes like 
+          | Jeet is built on CSS preprocessors. It's capable of doing a lot of programatic calculations that CSS can't. As such, you're no longer limited to classes like
           code .col-6
           | . Instead, you can pass
           span.italic  any
@@ -16,7 +16,7 @@
       .third.speed.column-example
         .features-img.speed-img.scrollReveal.flip-staggered-second
         h3.scrollReveal.fadeInUp-staggered-second Speed
-        p.scrollReveal.fadeInUp-staggered-second Jeet is famous for being the fastest grid system in the world. It's easy to read, terse, syntax (e.g. 
+        p.scrollReveal.fadeInUp-staggered-second Jeet is famous for being the fastest grid system in the world. It's easy to read, terse, syntax (e.g.
           code col(1/3)
           | ) allows you to craft a completely custom structure to your site literally in minutes.
       .third.integration.column-example
