--- a/views/_resources.jade
+++ b/views/_resources.jade
@@ -6,15 +6,15 @@
     .third.tight.video.getting-started.shift-example.scrollReveal
       a.fancybox(href='http://youtu.be/8JsbSolUF5c')
         .play.tutorial
-        h3 Video #1 Name
+        h3 Basic Usage
     .third.tight.video.basic-use.scrollReveal.shift-example.flip-staggered-second
       a.fancybox(href='http://youtu.be/8JsbSolUF5c')
         .play.tutorial
-        h3 Video #2 Name
+        h3 Getting Started
     .third.tight.video.advanced-use.scrollReveal.flip-staggered-third
       a.fancybox(href='http://youtu.be/8JsbSolUF5c')
         .play.tutorial
-        h3 Video #3 Name
+        h3 Advanced Usage
   .cf
     .cf.cf-example
   include _nav-full-color
