--- a/css/master.css
+++ b/css/master.css
@@ -2460,6 +2460,9 @@ strong {
 .resources {
   padding: 73px 0 59px 0;
 }
+.resources img {
+  max-width: 100%;
+}
 @media only screen and (max-width: 635px) {
   .resources {
     padding: 25px 0 29px 0;
@@ -2503,10 +2506,10 @@ strong {
   padding: 24px 0 10px 0;
 }
 .focused-example.getting-started:before {
-  content: 'shift(1/2)';
+  content: 'shift(1/3)';
 }
 .focused-example.basic-use:before {
-  content: 'shift(-1/2)';
+  content: 'shift(-1/3)';
 }
 @media only screen and (min-width: 1200px) {
   .basic-use {
@@ -2517,8 +2520,17 @@ strong {
 .tutorial {
   width: 100%;
   height: 200px;
+  position: relative;
   display: block;
   background-color: #48cfad;
+}
+.tutorial .screenshot {
+  opacity: 0.7;
+  -webkit-transition: all 400ms ease;
+  transition: all 400ms ease;
+}
+.tutorial .screenshot:hover {
+  opacity: 1;
 }
 @media only screen and (max-width: 768px) {
   .tutorial {
@@ -2529,6 +2541,15 @@ strong {
   .tutorial {
     height: 142px;
   }
+}
+.play-btn {
+  position: absolute;
+  z-index: 111;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  margin: auto;
 }
 .play {
   background-image: url("../img/play-icon.svg");
