--- a/css/master.css
+++ b/css/master.css
@@ -1912,19 +1912,20 @@ strong {
 .hide-grid-label,
 .show-grid-label {
   position: absolute;
+  margin-top: 3px;
   font-family: 'Montserrat', Helvetica, Arial, sans-serif;
-  font-size: 1.375rem;
+  font-size: 1.175em;
   text-transform: uppercase;
   z-index: 1;
   -webkit-transition: color 0.25s, padding 0.25s;
   transition: color 0.25s, padding 0.25s;
 }
 .hide-grid-label {
-  left: 50px;
+  left: 61px;
   color: #21b291;
 }
 .show-grid-label {
-  right: 46px;
+  right: 58px;
   padding-right: 10px;
 }
 .grid-visible .handle {
