[fix] toggle vert center

--- a/assets/css/_hero.styl
+++ b/assets/css/_hero.styl
@@ -48,6 +48,8 @@
     transition left 0.25s
 .hide-grid-label, .show-grid-label
   position absolute
+  top: 0
+  line-height: 70px
   font-family open-sans
   font-size large-font
   text-transform uppercase
