Add line height

--- a/assets/css/_api.styl
+++ b/assets/css/_api.styl
@@ -15,6 +15,7 @@
     color orange
   p
     padding (small-padding-block / 2) 0
+    line-height: 1.35em
 .static.api
   display none
   background-color #444
