--- a/assets/css/_features.styl
+++ b/assets/css/_features.styl
@@ -46,3 +46,5 @@
   retina-background-image('../img/speed')
 .integration-img
   retina-background-image('../img/integration')
+.edit-example
+  line-height: 1.35em
