Center last commit msg

--- a/assets/css/_github-band.styl
+++ b/assets/css/_github-band.styl
@@ -5,7 +5,7 @@
   background dark-green
   padding (small-padding-block - 3) 0
 .last-updated
-  margin (xs-padding-block - 1) 0 (-(xs-padding-block - 2)) 0
+  margin 14px 0 (-(xs-padding-block - 2)) 0
   white-space nowrap
   +below(small-snap)
     column(1)
