Add hover effect to links in hero

--- a/assets/css/_hero.styl
+++ b/assets/css/_hero.styl
@@ -13,6 +13,10 @@
   margin-top large-padding-block - 27
   font-size large-font * 1.1
   line-height 2.4rem
+  .inline-link
+    transition: all 400 ease
+    &:hover
+      border-bottom-color: lighten(green, 50%)
   +below(small-snap)
     margin-top med-padding-block - 27
     padding 0
