Cleanup nav styles

--- a/assets/css/_nav.styl
+++ b/assets/css/_nav.styl
@@ -59,6 +59,7 @@
     width 136px
     .nav-label
       padding-top 1px
+      top: -5px
     svg
       size(31px, 20px)
       margin-left xs-padding-block - 1
@@ -82,8 +83,8 @@
   top -7px
   display inline
   font-family open-sans
-  font-size: tiny-font
-  text-transform uppercase
+  font-size: 0.825rem
+  font-weight: bold
   display inline-block
   padding-left tiny-padding-block
   white-space nowrap
