--- a/src/assets/css/_hero.styl
+++ b/src/assets/css/_hero.styl
@@ -38,32 +38,32 @@
     border-radius 50px
     border-box box-sizing
   .track
-    size(448px, 72px)
+    size(448px, 83px)
     position relative
     color white
     background dark-green
     border 1px solid darken(dark-green, 10%)
     padding (small-padding-block - 1) (med-padding-block - 2)
   .handle
-    size(220px, 60px)
+    size(220px, 71px)
     pos(absolute, 5px, false, false, 6px)
     background white
     padding-top med-padding-block + 1
     transition left 0.25s
 .hide-grid-label, .show-grid-label
   position absolute
-  top: 0
-  line-height: 70px
+  top 0
+  line-height 80px
   font-family open-sans
-  font-size large-font
+  font-size 1.17rem
   text-transform uppercase
   z-index 1
   transition color 0.25s, padding 0.25s
 .hide-grid-label
-  left 61px
+  left 15.27%
   color dark-green
 .show-grid-label
-  right 58px
+  right 13.7%
   padding-right 10px
 .grid-visible
   .handle
