--- a/src/assets/css/_base.styl
+++ b/src/assets/css/_base.styl
@@ -22,11 +22,13 @@ body, div, header, footer, h1, h2, h3, p, ul, ol, li, code, a, span
   -webkit-tap-highlight-color rgba(0,0,0,0)
 h1
   font-size xl-font
-  font-family helvetica-bold
+  font-family helvetica-reg
   font-weight normal
   letter-spacing -0.04em
   +below(small-snap)
     font-size 2rem
+  &.headline
+    font-family helvetica-bold    
 h2
   font-size large-font
   font-family open-sans
