--- a/src/views/_installation.jade
+++ b/src/views/_installation.jade
@@ -1,6 +1,6 @@
 .installation.grid-container(data-scroll-index='3')
   .contained
-    h1.text-center.scrollReveal.fade-in Getting started is easy.
+    h1.headline.text-center.scrollReveal.fade-in Getting started is easy.
     h2.text-center.scrollReveal.fade-in Jeet is available in 2 tasty preprocessor flavors so it fits easily into any workflow.
     .half.scss.stack-example.scrollReveal.slide-in-first
       h3 SCSS Installation
