--- a/src/views/_features.jade
+++ b/src/views/_features.jade
@@ -1,8 +1,8 @@
 .features.text-center.grid-container(data-scroll-index='1')
   .cf
     .contained
-      h1.scrollReveal.fade-in What makes a good grid system?
-      h2.scrollReveal.fade-in Expressive code that makes sense. Real columns. Precision.
+      h1.scrollReveal.fade-in What makes a human grid system?
+      h2.scrollReveal.fade-in Expressive code that makes sense. Easy to create and iterate. Superior control and precision.
     .contained.edit-example
       .third.flexibility.column-example
         .features-img.flexibility-img.scrollReveal
@@ -16,9 +16,9 @@
       .third.speed.column-example
         .features-img.speed-img.scrollReveal.flip-staggered-second
         h3.scrollReveal.fadeInUp-staggered-second Speed
-        p.scrollReveal.fadeInUp-staggered-second Jeet is famous for being the fastest grid system in the world. It's easy to read, terse, syntax (e.g.&nbsp;
+        p.scrollReveal.fadeInUp-staggered-second Jeet is famous for being the fastest grid system in the world. Its easy to read, terse, syntax (e.g.&nbsp;
           code col(1/3)
-          | ) allows you to craft a completely custom structure to your site literally in minutes.
+          | ) allows you to craft a completely custom structure to your site in minutes.
       .third.integration.column-example
         .features-img.integration-img.scrollReveal.flip-staggered-third
         h3.scrollReveal.fadeInUp-staggered-third Integration
