--- a/src/views/_comparison.jade
+++ b/src/views/_comparison.jade
@@ -1,6 +1,6 @@
 .comparison.text-center.grid-container(data-scroll-index='2')
   .contained.scrollReveal.fade-in
-    h2 Grids aren't all the same. By being a preprocessor-only grid, Jeet can do things other grids can't
+    h2 Let's face it, Jeet can do things other grids can't
   .contained.scrollReveal.comparison-animation
     .comparatives.fourth.span-example
       .blank-box.bigger-cell.cell
