--- a/src/views/_hero.jade
+++ b/src/views/_hero.jade
@@ -2,13 +2,13 @@
   .contained
     h1.headline.white.scrollReveal.fade-in A grid system for humans
     p.nav-narrative.white.scrollReveal.fadeInUp-staggered-second
-      | We still build things the way machines read them - not the way we perceive them.  Jeet allows you to express your page grid the same way a 
+      | We still build things the way machines read them - not the way we intuit them.  Jeet allows you to express your page grid the same way a 
       a.white.inline-link(data-scroll-goto='4') human would describe
       | &nbsp;it. No more needlessly nesting elements. No more rigid twelve column rules. 
       a.white.inline-link(data-scroll-goto='1') Enjoy building faster
-      | &nbsp;with less code, and more flexibility. 
-      a.white.inline-link(data-scroll-goto='3') Start gridding
-      | &nbsp;like a human with Jeet.&nbsp;
+      | &nbsp;with less code, and more flexibility with 
+      a.white.inline-link(data-scroll-goto='3') Jeet.
+      | &nbsp;
     .grid-toggle.scrollReveal.pulse-staggered-third(data-scroll-goto='1')
       .track
         p.hide-grid-label hide grid
