update comparison table

--- a/src/assets/css/_comparison.styl
+++ b/src/assets/css/_comparison.styl
@@ -19,8 +19,9 @@
     line-height 1.3em
   &.darker
     background-color grey
-    +below(890px)
-      height 81px
+.no-touch .pushy-active .cell
+  white-space normal
+  min-height large-padding-block + 27
 .check
   background-image url('../img/check.svg')
   background-size 15px 12px
