--- a/src/views/_comparison.jade
+++ b/src/views/_comparison.jade
@@ -5,15 +5,22 @@
     .comparatives.fourth.span-example
       .blank-box.bigger-cell.cell
       .comparative.darker.cell
-        p Easy to start with
+        p Easy to get started
       .comparative.cell
-        p Ratio Flexibility
+        p Flexible syntax
+      .comparative.darker.cell
+        p Custom grids
+      .comparative.cell
+        p Superior precision
       .comparative.darker.cell
         p
-          | Actual columns <a href='http://imgur.com/a/OWyOQ', target='_blank'>?</a>
+          | Actual columns 
+          a(href='http://imgur.com/a/OWyOQ', target='_blank') ?
     .bootstrap.fourth.span-example
       .bootstrap-grid.bigger-cell.cell
       .check.darker.cell
+      .x.cell
+      .x.darker.cell
       .x.cell
       .x.darker.cell
     .foundation.fourth.span-example
@@ -21,8 +28,12 @@
       .check.darker.cell
       .x.cell
       .x.darker.cell
+      .x.cell
+      .x.darker.cell
     .jeet.fourth.span-example
       .jeet-logo.bigger-cell.cell
+      .check.darker.cell
+      .check.cell
       .check.darker.cell
       .check.cell
       .check.darker.cell
