fix headline font weight

--- a/src/assets/css/_hero.styl
+++ b/src/assets/css/_hero.styl
@@ -7,6 +7,8 @@
     padding (xl-padding-block + tiny-padding-block) 0 large-padding-block 0
 .headline
   font-size headline-font
+  font-family helvetica-bold  
+  font-weight normal
   +below(small-snap)
     font-size 2.6rem
 .nav-narrative
