--- a/src/views/layout.jade
+++ b/src/views/layout.jade
@@ -14,8 +14,9 @@ html
     meta(name="twitter:description", content="CSS preprocessor grid built with fractions and ratios to make columns flexible and your workflow fast.")
 
     title Jeet Grid System | Smart CSS preprocessor grids
-    script(src="http://fast.fonts.net/jsapi/9f115ec9-04c6-49ed-bf53-7dc9921e4184.js")
-    script(src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js")
+    script(type="text/javascript", src="http://fast.fonts.net/jsapi/9f115ec9-04c6-49ed-bf53-7dc9921e4184.js")
+    script(type="text/javascript", src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js")
+    //- link(type="text/css", rel="stylesheet", href='http://fast.fonts.net/cssapi/9f115ec9-04c6-49ed-bf53-7dc9921e4184.css')
     link(rel='stylesheet', href='css/master.css')
     //[if lt IE 10]>
       <link rel='stylesheet', href='css/ie.css'>
@@ -23,17 +24,17 @@ html
   body.landing-page
     block content
 
-  script(src='js/vendor/custom-modernizr.js')
-  script(src='js/vendor/pushy.js')
-  script(src='js/vendor/scrollIt.js')
-  script(src='js/vendor/jquery.slicknav.min.js')
-  script(src='js/bounceApi.js')
-  script(src="js/fastclick.js")
-  script(src='js/vendor/matchHeight.js')
-  script(src='js/vendor/fancybox.js')
-  script(src='js/stickyNav.js')
-  script(src='js/interactiveAPI.js')
-  script(src='js/animateScroll.js')
-  script(src="js/zeroClipboard.min.js")
-  script(src="js/updateBrowser.js")
-  script(src="js/main.js")
+  script(type="text/javascript", src='js/vendor/custom-modernizr.js')
+  script(type="text/javascript", src='js/vendor/pushy.js')
+  script(type="text/javascript", src='js/vendor/scrollIt.js')
+  script(type="text/javascript", src='js/vendor/jquery.slicknav.min.js')
+  script(type="text/javascript", src='js/bounceApi.js')
+  script(type="text/javascript", src="js/fastclick.js")
+  script(type="text/javascript", src='js/vendor/matchHeight.js')
+  script(type="text/javascript", src='js/vendor/fancybox.js')
+  script(type="text/javascript", src='js/stickyNav.js')
+  script(type="text/javascript", src='js/interactiveAPI.js')
+  script(type="text/javascript", src='js/animateScroll.js')
+  script(type="text/javascript", src="js/zeroClipboard.min.js")
+  script(type="text/javascript", src="js/updateBrowser.js")
+  script(type="text/javascript", src="js/main.js")
