Changed language in "features" partial

--- a/src/views/_features.jade
+++ b/src/views/_features.jade
@@ -30,7 +30,7 @@
         .features-img.flexibility-img.scrollReveal
         h3.scrollReveal.fade-in Flexibility
         p.scrollReveal.fade-in
-          | Jeet is built on CSS preprocessors. It's capable of doing a lot of programatic calculations that CSS can't. As such, you're no longer limited to classes like&nbsp;
+          | Jeet is built on CSS preprocessors. As such, you're no longer limited to classes like&nbsp;
           code .col-6
           | . Instead, you can pass
           span.italic  any
@@ -44,5 +44,5 @@
       .third.integration.column-example
         .features-img.integration-img.scrollReveal.flip-staggered-third
         h3.scrollReveal.fadeInUp-staggered-third Integration
-        p.scrollReveal.fadeInUp-staggered-third Jeet can work in any environment's pipeline whether it be a static site in SCSS, a Node package in Stylus, or as a Rails application. Anywhere Stylus or SCSS work, Jeet will work.
+        p.scrollReveal.fadeInUp-staggered-third Jeet can work in any environment's pipeline whether it be a static site in SCSS, a Node package in Stylus, or as a Rails application. Anywhere Stylus or SCSS work, Jeet will work. It's that simple.
   include _nav-full-color
