Changed language of "installation" partial

--- a/src/views/_installation.jade
+++ b/src/views/_installation.jade
@@ -1,7 +1,7 @@
 .installation.grid-container(data-scroll-index='3')
   .contained
     h1.headline.text-center.scrollReveal.fade-in Getting started is easy.
-    h2.text-center.scrollReveal.fade-in Jeet is available in 2 tasty preprocessor flavors so it fits easily into any workflow.
+    h2.text-center.scrollReveal.fade-in Jeet is available in 2 tasty flavors so it fits easily into any workflow.
     .half.scss.stack-example.scrollReveal.slide-in-first
       h3 SCSS Installation
       ol
