--- a/src/views/_share.jade
+++ b/src/views/_share.jade
@@ -6,8 +6,11 @@
         h2.text-center Share Jeet with your friends.
       a.facebook.share-inline-circle.scrollReveal(href='https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fjeet.gs')
         img(src='img/facebook-icon.svg')
-      a.twitter.share-inline-circle.scrollReveal.flip-staggered-second(href='http://twitter.com/intent/tweet?text=Jeet%20-%20A%20smart%20CSS%20preprocessor%20grid%20built%20with%20fractions%20and%20ratios%20to%20make%20columns%20flexible%20and%20your%20workflow%20fast. http%3A%2F%2Fjeet.gs')
+      a.twitter.share-inline-circle.scrollReveal.flip-staggered-second(href='http://twitter.com/intent/tweet?text=JEET%20-%20An%20intuitive,%20preprocessor%20grid%20system%20for%20humans. http%3A%2F%2Fjeet.gs')
         img(src='img/twitter-icon.svg')
       a.google.share-inline-circle.scrollReveal.flip-staggered-third(href='https://plus.google.com/share?url=http%3A%2F%2Fjeet.gs')
         img(src='img/googleplus-icon.svg')
   include _nav-full-color
+
+
+
