--- a/src/assets/css/_nav.styl
+++ b/src/assets/css/_nav.styl
@@ -18,7 +18,7 @@
     .logo
       background-image url('../img/jeet-logo-color.svg')
     .side-nav-link:hover, .side-nav-link.hover
-      background-color rgba(white, 0.9)
+      text-shadow: 0 0 20px white
       .nav-label
         color dark-grey
   &.green, &.light-green, &.orange
@@ -29,13 +29,13 @@
         color white
   &.green
     .side-nav-link:hover, .side-nav-link.hover
-      background-color rgba(green, 0.9)
+      text-shadow: 0 0 20px rgba(green, 0.9)
   &.light-green
     .side-nav-link:hover, .side-nav-link.hover
-      background-color rgba(dark-green, 0.9)
+      text-shadow: 0 0 20px rgba(dark-green, 0.9)
   &.orange
     .side-nav-link:hover, .side-nav-link.hover
-      background-color rgba(orange, 0.9)
+      text-shadow: 0 0 20px rgba(orange, 0.9)
 .side-nav-link
   height small-padding-block + 5
   text-align left
@@ -108,4 +108,4 @@
   .nav-icon
     fill darken(#cecece, 20%)
   .side-nav-link:hover
-    background-color rgba(grey, 0.9)
+    text-shadow: 0 0 20px rgba(grey, 0.9)
