--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -11,6 +11,7 @@ block content
     include _nav-default
     include _hero
     include _github-band
+    include _features-headline
     include _features
     include _comparison
     include _installation
