--- a/src/views/_features-headline.jade
+++ b/src/views/_features-headline.jade
@@ -1,4 +1,4 @@
-.features-headline.text-center.grid-container(data-scroll-index='9')
+.features-headline.text-center.grid-container.scrollReveal.fade-in(data-scroll-index='9')
   .cf
     .contained
       svg(version='1.1', xmlns='http://www.w3.org/2000/svg', xmlns:xlink='http://www.w3.org/1999/xlink', x='0px', y='0px', width='284.037px', height='87.333px', viewbox='0 0 284.037 87.333', enable-background='new 0 0 284.037 87.333', xml:space='preserve')
