--- a/src/views/_resources.jade
+++ b/src/views/_resources.jade
@@ -3,12 +3,12 @@
     h1.text-center.scrollReveal.fade-in Learn by example.
     h2.text-center.scrollReveal.fade-in We walk you through Jeet in short, disgestible, screencasts.
   .contained
-    .third.tight.video.getting-started.shift-example.scrollReveal
+    .third.tight.video.getting-started.shift-example.scrollReveal.flip-staggered-second
       a.fancybox(href='https://www.youtube.com/watch?v=roqlCwEn4iI')
         .play.tutorial
           img.play-btn(src='img/play-icon.svg')
         h3 Basic Usage
-    .third.tight.video.basic-use.scrollReveal.shift-example.flip-staggered-second
+    .third.tight.video.basic-use.scrollReveal.shift-example
       a.fancybox(href='https://www.youtube.com/watch?v=eGswREjYH84')
         .play.tutorial
           img.play-btn(src='img/play-icon.svg')
