--- a/src/views/layout.jade
+++ b/src/views/layout.jade
@@ -22,6 +22,8 @@ html
       <link rel='stylesheet', href='css/ie.css'>
       <![endif
   body.landing-page
+    .right.black#awwwards
+      a(href="http://www.awwwards.com/best-websites/jeet-gs-a-grid-system-for-humans", target="_blank") best websites of the world
     block content
 
   script(type="text/javascript", src='js/vendor/custom-modernizr.js')
