Stop using SCSS maps
Reverting back to standard SCSS variables because anything before SCSS 3.2 doesn't support mapping which makes Jeet harder to integrate with existing systems.

--- a/scss/jeet/_functions.scss
+++ b/scss/jeet/_functions.scss
@@ -2,8 +2,8 @@
 @function -get_span($ratio: 1) {
   @return $ratio * 100;
 }
-@function -get_column($ratios: 1, $g: jeet(gutter)) {
-  @if (jeet(parent-first) != 'true') {
+@function -get_column($ratios: 1, $g: $jeet-gutter) {
+  @if ($jeet-parent-first != 'true') {
     $ratios: -reverse($ratios);
   }
   $w: 100;
@@ -15,7 +15,7 @@
 }
 @function -get_layout_direction() {
   $result: '';
-  @if jeet(layout-direction) == RTL {
+  @if $jeet-layout-direction == RTL {
     $result: right;
   } @else {
     $result: left;
