--- a/scss/jeet/_settings.scss
+++ b/scss/jeet/_settings.scss
@@ -1,13 +1,6 @@
 // Grid Settings
-$jeet: (
-  gutter: 3,
-  parent-first: false,
-  layout-direction: LTR
-);
+$jeet-gutter: 3;
+$jeet-parent-first: false;
+$jeet-layout-direction: LTR;
 
-// Sass Namespacing Function
-@function jeet($var) {
-  @return map-get($jeet, $var);
-}
-
-$g: jeet(gutter);
+$g: $jeet-gutter;
