--- a/scss/jeet/index.scss
+++ b/scss/jeet/index.scss
@@ -1,8 +1,8 @@
 /*  Syntax Quick Reference
   --------------------------
-  column($ratios: 1, $offset: 0, $cycle: 0, $uncycle: 0, $gutter: jeet(gutter))
+  column($ratios: 1, $offset: 0, $cycle: 0, $uncycle: 0, $gutter: $jeet-gutter)
   span($ratio: 1, $offset: 0)
-  shift($ratios: 0, $col_or_span: column, $gutter: jeet(gutter))
+  shift($ratios: 0, $col_or_span: column, $gutter: $jeet-gutter)
   unshift()
   edit()
   center($max_width: 1410px, $pad: 0)
