Normalize installation instructions

--- a/src/views/_installation.jade
+++ b/src/views/_installation.jade
@@ -15,18 +15,18 @@
           code.inline.to-copy gem install sass
           a.btn.copy-btn(data-clipboard-text='gem install sass') copy
         li
-          code.inline.to-copy cd ~/Project/css
-          a.btn.copy-btn(data-clipboard-text='cd ~/Project/css') copy
+          code.inline.to-copy cd ~/Project
+          a.btn.copy-btn(data-clipboard-text='cd ~/Project') copy
         li
           code.inline.to-copy svn checkout https://github.com/mojotech/jeet/trunk/scss/jeet
           a.btn.copy-btn(data-clipboard-text='svn checkout https://github.com/mojotech/jeet/trunk/scss/jeet') copy
         li
           p
-            code.inline.to-copy @import 'jeet/index.scss';
-            a.btn.copy-btn(data-clipboard-text="@import 'jeet/index.scss';") copy
+            code.inline.to-copy @import 'jeet/index';
+            a.btn.copy-btn(data-clipboard-text="@import 'jeet/index';") copy
           p.copy-code-above
             | goes at the top of&nbsp;
-            code ~/Project/css/foo.scss
+            code ~/Project/foo.scss
     .half.stylus.scrollReveal.slide-in-second
       h3 Stylus Installation
       ol
