--- a/src/assets/css/_awwwards.styl
+++ b/src/assets/css/_awwwards.styl
@@ -7,11 +7,11 @@
   &.right
     right 0
     &.black a
-      retina-background-image('../img/awwwards_nominee_black_right')
+      background: url('../img/nominee-grey-cssda-right.svg')
   a
     display block
-    width 70px
-    height 105px
+    width 67px
+    height 120px
     text-indent -8000px
     background-repeat no-repeat
     background-position 0 0
@@ -20,7 +20,3 @@
 @media only screen and (max-width: 767px)
   #awwwards
     display none
-@media only screen and (-Webkit-min-device-pixel-ratio: 1.5), only screen and (-moz-min-device-pixel-ratio: 1.5), only screen and (-o-min-device-pixel-ratio: 3/2), only screen and (min-device-pixel-ratio: 1.5)
-  #awwwards a
-    background-size 70px 105px
-
