--- a/src/views/layout.jade
+++ b/src/views/layout.jade
@@ -23,7 +23,7 @@ html
       <![endif
   body.landing-page
     .right.black#awwwards
-      a(href="http://www.awwwards.com/best-websites/jeet-gs-a-grid-system-for-humans", target="_blank") best websites of the world
+      a(href="http://www.cssdesignawards.com/sites/jeet-gs/24564", target="_blank") best websites of the world
     block content
 
   script(type="text/javascript", src='js/vendor/custom-modernizr.js')
