--- a/stylus/jeet/_grid.styl
+++ b/stylus/jeet/_grid.styl
@@ -33,7 +33,7 @@ column(ratios = 1, offset = 0, cycle = 0, uncycle = 0, gutter = jeet.gutter)
       margin-{opposite-position(side)}: (margin_last)%
       float: opposite-position(side)
     &:nth-child({cycle}n + 1)
-      clear: side
+      clear: both
   else
     &:last-child
       margin-{opposite-position(side)}: (margin_last)%
@@ -41,7 +41,7 @@ column(ratios = 1, offset = 0, cycle = 0, uncycle = 0, gutter = jeet.gutter)
 col = column
 
 // Columns without Gutters
-span(ratio = 1, offset = 0)
+span(ratio = 1, offset = 0, cycle = 0, uncycle = 0)
   side = -get_layout_direction()
   span_width = -get_span(ratio)
   margin_l = margin_r = 0
@@ -61,6 +61,16 @@ span(ratio = 1, offset = 0)
   width: (span_width)%
   margin-{side}: (margin_l)%
   margin-{opposite-position(side)}: (margin_r)%
+  if uncycle != 0
+    &:nth-child({uncycle}n)
+      float: side
+    &:nth-child({cycle}n + 1)
+      clear: none
+  if cycle != 0
+    &:nth-child({cycle}n)
+      float: opposite-position(side)
+    &:nth-child({cycle}n + 1)
+      clear: both
 
 // Source Ordering
 shift(ratios = 0, col_or_span = column, gutter = jeet.gutter)
