--- a/src/assets/css/_base.styl
+++ b/src/assets/css/_base.styl
@@ -9,6 +9,7 @@ pie-path = '/pie.htc'
 
 html
   font-size 16px
+  overflow-x: hidden
   +below(med-snap)
     font-size 14px
 
@@ -28,7 +29,7 @@ h1
   +below(small-snap)
     font-size 2rem
   &.headline
-    font-family helvetica-bold    
+    font-family helvetica-bold
 h2
   font-size large-font
   font-family open-sans
