--- a/src/views/layout.jade
+++ b/src/views/layout.jade
@@ -23,7 +23,8 @@ html
       <![endif
   body.landing-page
     .right.black#awwwards
-      a(href="http://www.cssdesignawards.com/sites/jeet-gs/24564", target="_blank") best websites of the world
+      div.github-ribbon
+        a.github-ribbon__link(href="https://github.com/mojotech/jeet", title="Fork me on GitHub") Fork me on GitHub
     block content
 
   script(type="text/javascript", src='js/vendor/custom-modernizr.js')
