--- a/src/assets/css/master.styl
+++ b/src/assets/css/master.styl
@@ -8,7 +8,6 @@ base()
 @import 'vendor/animate'
 @import '_fonts'
 @import '_base'
-@import '_awwwards'
 @import '_nav'
 @import '_mobileMenu'
 @import '_api'
@@ -21,3 +20,4 @@ base()
 @import '_share'
 @import '_footer'
 @import '_updateBrowser'
+@import '_github'
